--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.18.1",
+    "@supabase/supabase-js": "^2.22.0",
     "next": "latest",
     "normalize.css": "^8.0.1",
     "react": "18.2.0",
